backoffice/backoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes configMap -f docker-compose-backoffice.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backoffice
  name: backoffice
spec:
  replicas: 10
  selector:
    matchLabels:
      io.kompose.service: backoffice
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes configMap -f docker-compose-backoffice.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: backoffice
    spec:
      containers:
        - args:
            - --verbose
            - --global-response-templating
            - --max-template-cache-entries
            - "0"
          image: wiremock/wiremock:3.6.0
          name: backoffice
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /home/wiremock/__files
              name: wiremock-files
          volumeMounts:
            - mountPath: /home/wiremock/mappings
              name: wiremock-mappings
      restartPolicy: Always
      volumes:
        - name: wiremock-mappings
          configMap:
            name: backoffice-cm0
status: {}
