backoffice/backoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes configMap -f docker-compose-backoffice.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backoffice
  name: backoffice
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 8080
  selector:
    io.kompose.service: backoffice
status:
  loadBalancer: {}
