backoffice/backoffice-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backoffice-auth
  annotations:
    kubernetes.io/ingress.class: nginx
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: backoffice-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - backoffice'
spec:
  ingressClassName: nginx
  rules:
  - host: backoffice.aassmt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: backoffice
            port: 
              number: 8080
